# ssg-recipe-project

./: README.md
.obsidian/: appearance.json  workspace.json
recipe-book/: .gitignore  app.db  app.sqbpro  config.py  requirements.txt
recipe-book/app/: __init__.py  app.sqbpro  filter.py  forms.py  models.py
recipe-book/app/api/: app.py
recipe-book/app/api/kamis/: client.py
recipe-book/app/kamis_api/: kamis_api.py  setup.cfg
recipe-book/app/kamis_api/kamis/models/: daily_sales_list.py  period_product_list.py
recipe-book/app/kamis_api/tests/models/: common_test.py
recipe-book/app/kamispy-main/: .gitignore  LICENSE  README.rst  app.py  kamis_client.py
recipe-book/app/kamispy-main/kamis/: client.py
recipe-book/app/kamispy-main/tests/: client_test.py
recipe-book/app/static/: bootstrap.min.css  style.css
recipe-book/app/templates/: 404.html  base.html  form_errors.html  index.html  navbar.html
recipe-book/app/views/: auth_views.py  comment_views.py  main_views.py  post_views.py
recipe-book/config/: development.py  production.py
recipe-book/migrations/versions/: 036a8aa4baab_.py  0de78946b9d2_.py  0fbf71e8d188_.py  10bd9eb0e850_.py  1b30edc0db40_.py  250c945fda4b_.py  311d5243d8a3_.py  33a425586f5b_.py  3cdcaa93b9e0_.py  3e3a9cea5c82_.py  43922a66f76e_.py  549249bc9c82_.py  629d6e5e7211_.py  6d63df4d2e2d_.py  6e545b1ad4b5_.py  710e3bda7244_.py  7143ce607d42_.py  802d546d6333_.py  81746abbde01_.py  8e784b37271b_.py  a270b0d6e75d_.py  b9266d6ffdfe_.py  c2b181a35222_.py  c473fc7e2b7f_.py  ca2eb57ec3e6_.py  e44caa9f963c_.py  f45d42570c1b_.py
(+11 files in other folders)
