[bdist_wheel]
universal = 1

[metadata]
name = kamispy
version = attr: kamis.__version__
description = KAMIS Open-API 비공식 파이썬 클라이언트
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = kamis, python-api
url = https://github.com/spoqa/kamispy
license = MIT License
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Intended Audience :: Developers
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
author = Spoqa Creators
author_email = dev@spoqa.com

[options]
python_requires = >= 3.7.0
packages = find:
install_requires =
    requests

[options.packages.find]
exclude =
    tests
    tests.*

[options.extras_require]
tests =
    flake8
    pytest
    requests_mock
